# pbrt

./: CMakeLists.txt  a.ppm  main.cpp
core/: tracer.h
core/component/: bounds.h  camera.h  geometry.h  material.h  medium.h  normal.h  point.h  ray.h  transform.h  vec.h
core/shape/: bvh_node.cpp  bvh_node.h  cylinder.cpp  cylinder.h  disk.cpp  disk.h  obj_parser.h  plane.cpp  plane.h  shape.cpp  shape.h  shape_list.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h
core/utils/: const.h  utils.cpp  utils.h
